# PureEqSat

./: PureEqSat.cabal  README  README.md
examples/: ex1.pes  ex2.pes  ex3.pes  ex4.pes  ex5.pes  ex6.pes  ex7.pes
rapport/: Abstract.tex  Background.tex  Conclussion.tex  Future.tex  Implementation.tex  Rapport.tex  Result.tex  Theory.tex  Util.sty
src/: DisjointSet.hs  DisjointSetA.hs  Dot.hs  Expr.hs  IOSetA.hs  ListSet.hs  ListSetA.hs  Main.hs  Opt.hs  Parser.hs  Rule.hs  TestExpr.hs  Thoughts.txt  Translate.hs  example.pes
src/Data/: IOStableRef.hs
