Name:                PureEqSat
Version:             0.1
License:             MIT
Author:              Daniel Gustafsson, Simon Edwardsson
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.2

Executable PureEqSat
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Data.IOStableRef
                    Expr
                    IOSetA
                    Opt
                    Parser
                    Rule
                    TestExpr
                    Translate

  build-depends:    base,
                    containers,
                    mtl,
                    cmdargs,
                    parsec,
                    QuickCheck
